[package]
name = "mai2"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num_enum = "0.5.11"
crc = "3.0.1"
zstd = "0.12.3+zstd.1.5.2"
lru = "0.10.0"
serde_yaml = "0.9.19"
serde = { version = "1.0.158", features = ["derive"] }
rusty_pool = { version = "*" }
num_cpus = "1.15.0"
lazy_static = "1.4.0"
hyperloglogplus = "0.4.1"